fix to get_charts

--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -10,7 +10,11 @@ dopepod
     <div class="col-12 results-header">
       {% if results.extra_options %}
         <button class="btn-dope back-button results-back" onclick="window.history.back()">
-          <i class="fas fa-arrow-circle-left"></i>
+          {% if request.is_ajax %}
+            <i class="fas fa-arrow-circle-left"></i>
+          {% else %}
+            &laquo;
+          {% endif %}
         </button>
         <div class="extra-options">
           <a class="btn-dope reverse-toggle results-minimize" data-toggle="collapse" href="#results-collapse{{ results.drop }}" aria-expanded="true" aria-controls="results-collapse" aria-label="Minimize">
