--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -45,7 +45,9 @@
     </ul>
   </div>
   <div class="col-6 col-lg-2" id="dopebar-c">
-    {% include 'logo.html' %}
+    <a class="index-link" href="/" title="dopepod">
+      <h1>dopepod</h1>
+    </a>
   </div>
   <div class="col-3 col-lg-5" id="dopebar-r">
     {% if user.is_authenticated %}
