--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,4 +1,4 @@
-<a class="logo-wrapper index-link dopebar-link" href="/" title="dopepod">
+<div class="logo-wrapper noselect">
   <span class="logo logo-1">d</span>
   <span class="logo logo-2">o</span>
   <span class="logo logo-3">p</span>
@@ -7,4 +7,4 @@
   <span class="logo logo-6">o</span>
   <span class="logo logo-7">d</span>
   <span id="nothing"></span>
-</a>
+</div>
