--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col results color-5-trans">
+<div class="col-12 results color-5-trans">
   <div id="login-wrapper">
     <h1>
       Search for and listen to thousands of free podcasts on
