--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -183,17 +183,19 @@ dopepod
       {% include 'pagination.html' %}
     {% endif %}
 
-    {% if results.podcasts or results.episodes %}
-      {% if results.view == 'grid' or results.view == 'list' %}
-        {% include 'search.html' %}
-      {% elif results.view == 'charts' %}
-        {% include 'charts.html' %}
-      {% elif results.view == 'subscriptions'%}
-        {% include 'subscriptions.html' %}
-      {% elif results.view == 'playlist'%}
-        {% include 'playlist.html' %}
+    <div class="col-12 results-content">
+      {% if results.podcasts or results.episodes %}
+        {% if results.view == 'grid' or results.view == 'list' %}
+          {% include 'search.html' %}
+        {% elif results.view == 'charts' %}
+          {% include 'charts.html' %}
+        {% elif results.view == 'subscriptions'%}
+          {% include 'subscriptions.html' %}
+        {% elif results.view == 'playlist'%}
+          {% include 'episodes.html' %}
+        {% endif %}
       {% endif %}
-    {% endif %}
+    </div>
 
     {% if results.pagination %}
       {% include 'pagination.html' %}
