--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -5,7 +5,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col results color-5-trans">
+<div class="col-12 results color-5-trans">
   <div class="row" id="showpod">
     <div class="col-12 col-lg-4" id="showpod-l">
       <!-- BADGE -->
