--- a/index/static/style.css
+++ b/index/static/style.css
@@ -430,7 +430,8 @@ a:hover {
   float: right;
 }
 #dopebar-collapse {
-  padding: 15px 5px 0;
+  padding: 15px 10px 0;
+  width: 100%;
 }
 #dopebar-collapse ul {
   margin: 10px 0 0;
@@ -1094,7 +1095,7 @@ a:hover {
 .charts-result h1 {
   font-size: 16px;
   overflow: hidden;
-  height: 39px;
+  height: 19px;
   margin-bottom: 3px;
 }
 .charts-result p {
