--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -51,18 +51,15 @@
             </div>
           </div>
           <div class="col-12 order-2 col-md-6 order-md-3" id="right">
-            <div class="row">
-              <div class="col-12 color-5-trans last-played-box results-header">
-                <h1>
-                  Last played
-                </h1>
-              </div>
+            <div class="row" id="last-played">
+              {% with last_played as results %}
+                {% if last_played %}
+                  {% include 'results_base.html' %}
+                {% endif %}
+              {% endwith %}
             </div>
             <!-- LAST PLAYED -->
-            <div class="row" id="last-played">
-              {% if last_played %}
-                {% include 'last_played.html' %}
-              {% endif %}
+            <div class="row" >
             </div>
           </div>
         </div>
