--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -193,6 +193,8 @@ dopepod
           {% include 'subscriptions.html' %}
         {% elif results.view == 'playlist'%}
           {% include 'episodes.html' %}
+        {% elif results.view == 'last_played'%}
+          {% include 'last_played.html' %}
         {% endif %}
       {% endif %}
     </div>
