--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -2,21 +2,23 @@
   {% for subscription in results.podcasts %}
     {% with subscription.podcast as podcast %}
       <div class="col-12 col-md-4 subscriptions-box">
-        <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
-          <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
-        </a>
-        <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
-          <h1 class="result-title">
-            {{ podcast.title }}
-          </h1>
-        </a>
-        <p class="last-updated">
-          <span>Last updated: </span>
-          {{ subscription.last_updated }}
-        </p>
-        <button class="btn-dope select-subscription" data-podid="{{ podcast.podid }}">
-          Select
-        </button>
+        <div class="subscriptions-result clearfix">
+          <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
+            <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
+          </a>
+          <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
+            <h1 class="result-title">
+              {{ podcast.title }}
+            </h1>
+          </a>
+          <p class="last-updated">
+            <span>Last updated: </span>
+            {{ subscription.last_updated|date:'d-m-Y H:i' }}
+          </p>
+          <button class="btn-dope select-subscription" data-podid="{{ podcast.podid }}">
+            Select
+          </button>
+        </div>
       </div>
     {% endwith %}
   {% endfor %}
