--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1129,12 +1129,6 @@ a:hover {
 .last-played-collapse p {
   margin: 0;
 }
-.last-played-result ul {
-  font-size: 12px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
 .last-played-buttons {
   margin: 10px 40px 0 0;
 }
@@ -1158,16 +1152,24 @@ a:hover {
 }
 .last-played-result h1 {
   font-size: 16px;
-  margin-bottom: 3px;
+  height: 20px;
+  margin-bottom: 2px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .last-played-result p {
-  margin-bottom: 3px;
+  margin-bottom: 2px;
   height: 40px;
   overflow: hidden;
   font-size: 14px;
+}
+.last-played-result ul {
+  height: 35px;
+  font-size: 12px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 .last-played-toggle {
   position: absolute;
