--- a/index/static/style.css
+++ b/index/static/style.css
@@ -63,12 +63,13 @@ a:hover {
   display: inline-block;
   transition: all .15s ease-in-out;
 }
-.active {
+.btn-dope.active {
   color: #fff;
   background: rgba(0, 191, 165, 1);
 }
-.active h1 {
+.select-subscription.active h1 {
   color: #000;
+  background: rgba(0, 191, 165, 1);
 }
 .btn-dope:hover, .btn-dope:focus {
   color: #fff;
