--- a/index/static/style.css
+++ b/index/static/style.css
@@ -67,10 +67,6 @@ a:hover {
   color: #fff;
   background: rgba(0, 191, 165, 1);
 }
-.select-subscription.active h1 {
-  color: #000;
-  background: rgba(0, 191, 165, 1);
-}
 .btn-dope:hover, .btn-dope:focus {
   color: #fff;
   outline: none;
@@ -1053,7 +1049,7 @@ a:hover {
 .charts-box, .last-played-box {
   padding: 10px 10px 0 10px;
 }
-.charts-box a, .result-box a, .playlist-box a {
+.charts-box a, .result-box a {
   color: unset;
   font-weight: unset;
 }
@@ -1166,7 +1162,6 @@ a:hover {
   font-size: 14px;
 }
 .last-played-result ul {
-  height: 35px;
   font-size: 12px;
   padding: 0;
   margin: 0;
@@ -1249,6 +1244,12 @@ a:hover {
   margin-bottom: 4px;
   font-weight: 400;
   overflow: hidden;
+}
+.subscriptions-result.active {
+  background: rgba(0, 191, 165, 1);
+}
+.subscriptions-result.active h1 {
+  color: #000;
 }
 .select-subscription {
   float: right;
