--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -16,7 +16,7 @@ dopepod
     </a>
   </p>
   <p>
-    You have {{ user.playlist_episode.count }} episode{{ user.playlist_episode.count|pluralize }} on your
+    You have {{ user.episode.count }} episode{{ user.episode.count|pluralize }} on your
     <a class="playlist-link" href="{% url 'playlist' %}">
       playlist
     </a>
