--- a/index/static/style.css
+++ b/index/static/style.css
@@ -48,6 +48,7 @@ a:hover {
   color: inherit;
   border: 2px solid rgba(0, 191, 165, 1);
   padding: .25rem .5rem;
+  cursor: pointer;
   font-weight: 600;
   background: inherit;
   border-radius: .25rem;
@@ -991,9 +992,6 @@ a:hover {
   margin-top: 10px;
   float: right;
 }
-.play-button {
-  cursor: pointer;
-}
 
 /* RESULTS BASE */
 .results {
@@ -1150,14 +1148,14 @@ a:hover {
 .last-played-result h1 {
   font-size: 16px;
   height: 20px;
-  margin-bottom: 2px;
+  margin-bottom: 3px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.last-played-result p {
-  margin-bottom: 2px;
-  height: 40px;
+.last-played-result h2 {
+  margin-bottom: 3px;
+  height: 32px;
   overflow: hidden;
   font-size: 14px;
 }
